# digital-twin-dashboard

./: CONTRIBUTING.rst  LICENSE  README.rst  setup.cfg
bundles/desktop/: README.md  run.py
bundles/docker/: README.md
bundles/docker/scripts/: build_image.sh  run_image.sh
bundles/docker/setup/: apps.yml  requirements.txt
codes_dashboard/: __init__.py
codes_dashboard/app/: CodesDashboard.py  core.py  main.py
codes_dashboard/app/core/: ross_binary_file.py
codes_dashboard/app/ui/: __init__.py  parallel_coords.py  scatter_plot.py  time_plot.py
examples/jupyter/: show.ipynb
tests/: test_import.py  test_read_ross_file.py
