[metadata]
name = codes-dashboard
version = 1.0.0
description = Initial dashboard for CODES digital twin
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Caitlin Ross
license = BSD License
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: JavaScript
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules
keywords =
    Python
    Interactive
    Web
    Application
    Framework

[options]
packages = find:
include_package_data = True
install_requires =
    trame
    trame-vuetify
    trame-grid-layout
    trame-plotly
    pandas
    numpy
    plotly

[options.entry_points]
console_scripts =
    codes-dashboard = codes_dashboard.app:main
jupyter_serverproxy_servers =
    codes-dashboard = codes_dashboard.app.jupyter:jupyter_proxy_info
[semantic_release]
version_pattern = setup.cfg:version = (\d+\.\d+\.\d+)
